vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__entity_missing_is.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
entity uart
end entity;

== tree ==
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'uart'
  EntityDeclarationEpilogue
    Keyword(End)
    Keyword(Entity)
    SemiColon

== diagnostics ==
1:12 expected 'is'
