vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__entity_missing_trailing_semicolon.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
entity uart is
end entity

== tree ==
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'uart'
    Keyword(Is)
  EntityDeclarationEpilogue
    Keyword(End)
    Keyword(Entity)

== diagnostics ==
2:11 expected ';'
