vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__entity_unclosed_port_list.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
entity uart is
  port (
    clk : in std_logic;
    rst : in std_logic
end entity;

== tree ==
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'uart'
    Keyword(Is)
  EntityHeader
    PortClause
      Keyword(Port)
      LeftPar
      InterfaceList
        InterfaceObjectDeclaration
          IdentifierList
            Identifier 'clk'
          Colon
          Keyword(In)
          SubtypeIndication
            Name
              NameDesignatorPrefix
                Identifier 'std_logic'
        SemiColon
        InterfaceObjectDeclaration
          IdentifierList
            Identifier 'rst'
          Colon
          Keyword(In)
          SubtypeIndication
            Name
              NameDesignatorPrefix
                Identifier 'std_logic'
  EntityDeclarationEpilogue
    Keyword(End)
    Keyword(Entity)
    SemiColon

== diagnostics ==
4:23 expected ')'
4:23 expected ';'
