vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__parse_entity_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "to_test_text(Parser::entity, \"\\\nentity myent is\nend entity myent;\",)"
---
EntityDeclaration
  Keyword(Entity)
  Identifier 'myent'
  Keyword(Is)
  EntityHeader
  Keyword(End)
  Keyword(Entity)
  Identifier 'myent'
  SemiColon
