vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__parse_entity_declaration.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "to_test_text(Parser::entity_declaration, \"\\\nentity myent is\nend entity;\",)"
---
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'myent'
    Keyword(Is)
  EntityDeclarationEpilogue
    Keyword(End)
    Keyword(Entity)
    SemiColon
