vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__parse_entity_with_empty_generics_and_ports.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
entity my_ent is
    generic();
    port();
begin
end my_ent;


== tree ==
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'my_ent'
    Keyword(Is)
  EntityHeader
    GenericClause
      Keyword(Generic)
      LeftPar
      RightPar
      SemiColon
    PortClause
      Keyword(Port)
      LeftPar
      RightPar
      SemiColon
  EntityStatements
    DeclarationStatementSeparator
      Keyword(Begin)
  EntityDeclarationEpilogue
    Keyword(End)
    Identifier 'my_ent'
    SemiColon

== diagnostics ==
2:13 expected InterfaceList
3:10 expected InterfaceList
